eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catat-api-deployment
  labels:
    app: catat-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catat-api
  template:
    metadata:
      labels:
        app: catat-api
    spec:
      serviceAccountName: catat-api-sa
      containers:
        - name: catat-api
          image: 321869098547.dkr.ecr.ap-southeast-3.amazonaws.com/catat:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
